--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "react-icons": "^5.0.1",
     "react-intersection-observer": "^9.8.1",
     "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.3",
+    "react-scroll": "^1.9.0",
     "swiper": "^11.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
+    "@types/react-scroll": "^1.8.10",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "@vitejs/plugin-react": "^4.2.1",
